# ayon-dev-workspace

./: .gitconfig  .pre-commit-config.yml  .zshrc  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install-zsh.sh  post-create.sh
.dotfiles/: .zshrc
.dotfiles/config/: starship.toml
